// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Messages A message is removed if the modal is closed 1`] = `
.emotion-0 {
  position: fixed;
  width: 80%;
  max-width: 800px;
  top: 50px;
  left: 0;
  right: 0;
  z-index: 200;
  margin: 0 auto;
}

.emotion-2 {
  position: fixed;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  background-color: rgba(0, 0, 0, 0.8);
  z-index: 1000;
  overflow-x: auto;
}

@media (max-width: 48em) {
  .emotion-2 {
    top: 64px;
    overflow-y: auto;
    white-space: normal;
    z-index: 26;
  }
}

@media (max-width: 29.75em) {
  .emotion-2 {
    top: 43px;
  }
}

.emotion-4 {
  overflow-x: auto;
  background-color: white;
  margin: 52px auto 52px;
  padding: 1em 2em 3em;
  max-width: 400px;
  border-radius: 5px;
  border-radius: 0;
  min-height: 210px;
  max-width: 620px;
  padding-bottom: 26px;
  background-color: #d1372e;
  color: white;
}

.emotion-7 {
  display: inline-block;
  color: #ffffff;
  background-color: #20588f;
  border: 2px solid #20588f;
  border-radius: 4px;
  padding: 4px 13px;
  outline-width: 0;
  cursor: pointer;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-size: 16px;
  font-size: 0.8888888888888888rem;
  line-height: 1.625;
  font-family: 'Source Sans Pro',Helvetica,Arial,STKaiti,'华文楷体',KaiTi,SimKai,'楷体',KaiU,DFKai-SB,'標楷體',SongTi,'宋体',sans-serif;
  font-weight: 700;
  -webkit-transition: all .2s cubic-bezier(0.17, 0.04, 0.03, 0.94);
  transition: all .2s cubic-bezier(0.17, 0.04, 0.03, 0.94);
  box-shadow: none;
  text-align: center;
  -webkit-transition: background-color none;
  transition: background-color none;
  padding: 0;
  border-radius: 0;
  color: inherit;
  font-size: inherit;
  background-color: transparent;
  box-shadow: none;
  border: none;
  font-weight: 400;
  float: right;
  height: 44px;
  width: 44px;
  margin-top: -5px;
  margin-right: -20px;
}

.emotion-7:hover,
.emotion-7:focus {
  color: white;
  background-color: #184673;
  border: 2px solid #184673;
}

.emotion-7[disabled] {
  color: #777777;
  background-color: #e6e6e6;
  border-color: transparent;
  cursor: not-allowed;
}

.emotion-7:focus {
  box-shadow: 0 0 2px #20588f;
}

.emotion-7:hover,
.emotion-7:active,
.emotion-7:disabled,
.emotion-7:focus {
  box-shadow: none;
  color: #20588f;
  background-color: transparent;
  border: none;
}

.emotion-7:focus {
  outline-width: medium;
}

.emotion-9 {
  float: right;
  height: 24px;
  width: 24px;
  margin-right: 7px;
  color: #777777;
  background-color: #d1372e;
  color: white;
}

.emotion-11 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 100%;
  width: 100%;
}

.emotion-13 {
  height: 100%;
  padding-top: 26px;
  font-size: 24px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  justify-content: space-between;
}

.emotion-15 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.emotion-17 {
  width: 27px;
  height: 27px;
  margin-right: 13px;
}

.emotion-19 {
  width: 100%;
  display: inline-block;
  text-align: left;
}

.emotion-21 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  justify-content: space-between;
  -webkit-align-items: flex-end;
  -webkit-box-align: flex-end;
  -ms-flex-align: flex-end;
  align-items: flex-end;
  margin-top: 13px;
}

<div>
  <div
    class="emotion-0 emotion-1"
  >
    <div
      class="emotion-2 emotion-3"
    >
      <div
        class="emotion-4 emotion-5"
      >
        <button
          class="emotion-6 emotion-7 emotion-8"
          data-testid="closeAlert"
          type="button"
        >
          <svg
            aria-hidden="true"
            class="c-icon emotion-9 emotion-10"
            data-license="Apache License 2.0"
            data-source="Material Design"
            fill="currentColor"
            height="1em"
            preserveAspectRatio="xMidYMid meet"
            severity="danger"
            style="vertical-align: middle;"
            viewBox="0 0 24 24"
            width="1em"
          >
            <g>
              <path
                d="M19 6.41L17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z"
              />
              <path
                d="M0 0h24v24H0z"
                fill="none"
              />
            </g>
          </svg>
        </button>
        <div
          class="emotion-11 emotion-12"
        >
          <div
            class="emotion-13 emotion-14"
          >
            <div
              class="emotion-15 emotion-16"
            >
              <svg
                aria-hidden="true"
                class="c-icon emotion-17 emotion-18"
                data-license="Apache License 2.0"
                data-source="Material Design"
                fill="currentColor"
                height="1em"
                preserveAspectRatio="xMidYMid meet"
                style="vertical-align: middle;"
                viewBox="0 0 24 24"
                width="1em"
              >
                <g>
                  <path
                    d="M0 0h24v24H0V0z"
                    fill="none"
                  />
                  <path
                    d="M11 15h2v2h-2zm0-8h2v6h-2zm.99-5C6.47 2 2 6.48 2 12s4.47 10 9.99 10C17.52 22 22 17.52 22 12S17.52 2 11.99 2zM12 20c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8z"
                  />
                </g>
              </svg>
              <span
                class="emotion-19 emotion-20"
              >
                Testmessage
              </span>
            </div>
            <div
              class="emotion-21 emotion-22"
            />
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Messages A message is removed if the modal is closed 2`] = `
.emotion-0 {
  position: fixed;
  width: 80%;
  max-width: 800px;
  top: 50px;
  left: 0;
  right: 0;
  z-index: 200;
  margin: 0 auto;
  display: none;
}

<div>
  <div
    class="emotion-0 emotion-1"
  />
</div>
`;

exports[`Messages A single message renders correctly 1`] = `
.emotion-0 {
  position: fixed;
  width: 80%;
  max-width: 800px;
  top: 50px;
  left: 0;
  right: 0;
  z-index: 200;
  margin: 0 auto;
}

.emotion-2 {
  position: fixed;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  background-color: rgba(0, 0, 0, 0.8);
  z-index: 1000;
  overflow-x: auto;
}

@media (max-width: 48em) {
  .emotion-2 {
    top: 64px;
    overflow-y: auto;
    white-space: normal;
    z-index: 26;
  }
}

@media (max-width: 29.75em) {
  .emotion-2 {
    top: 43px;
  }
}

.emotion-4 {
  overflow-x: auto;
  background-color: white;
  margin: 52px auto 52px;
  padding: 1em 2em 3em;
  max-width: 400px;
  border-radius: 5px;
  border-radius: 0;
  min-height: 210px;
  max-width: 620px;
  padding-bottom: 26px;
  background-color: #d1372e;
  color: white;
}

.emotion-7 {
  display: inline-block;
  color: #ffffff;
  background-color: #20588f;
  border: 2px solid #20588f;
  border-radius: 4px;
  padding: 4px 13px;
  outline-width: 0;
  cursor: pointer;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-size: 16px;
  font-size: 0.8888888888888888rem;
  line-height: 1.625;
  font-family: 'Source Sans Pro',Helvetica,Arial,STKaiti,'华文楷体',KaiTi,SimKai,'楷体',KaiU,DFKai-SB,'標楷體',SongTi,'宋体',sans-serif;
  font-weight: 700;
  -webkit-transition: all .2s cubic-bezier(0.17, 0.04, 0.03, 0.94);
  transition: all .2s cubic-bezier(0.17, 0.04, 0.03, 0.94);
  box-shadow: none;
  text-align: center;
  -webkit-transition: background-color none;
  transition: background-color none;
  padding: 0;
  border-radius: 0;
  color: inherit;
  font-size: inherit;
  background-color: transparent;
  box-shadow: none;
  border: none;
  font-weight: 400;
  float: right;
  height: 44px;
  width: 44px;
  margin-top: -5px;
  margin-right: -20px;
}

.emotion-7:hover,
.emotion-7:focus {
  color: white;
  background-color: #184673;
  border: 2px solid #184673;
}

.emotion-7[disabled] {
  color: #777777;
  background-color: #e6e6e6;
  border-color: transparent;
  cursor: not-allowed;
}

.emotion-7:focus {
  box-shadow: 0 0 2px #20588f;
}

.emotion-7:hover,
.emotion-7:active,
.emotion-7:disabled,
.emotion-7:focus {
  box-shadow: none;
  color: #20588f;
  background-color: transparent;
  border: none;
}

.emotion-7:focus {
  outline-width: medium;
}

.emotion-9 {
  float: right;
  height: 24px;
  width: 24px;
  margin-right: 7px;
  color: #777777;
  background-color: #d1372e;
  color: white;
}

.emotion-11 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 100%;
  width: 100%;
}

.emotion-13 {
  height: 100%;
  padding-top: 26px;
  font-size: 24px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  justify-content: space-between;
}

.emotion-15 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.emotion-17 {
  width: 27px;
  height: 27px;
  margin-right: 13px;
}

.emotion-19 {
  width: 100%;
  display: inline-block;
  text-align: left;
}

.emotion-21 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  justify-content: space-between;
  -webkit-align-items: flex-end;
  -webkit-box-align: flex-end;
  -ms-flex-align: flex-end;
  align-items: flex-end;
  margin-top: 13px;
}

<div>
  <div
    class="emotion-0 emotion-1"
  >
    <div
      class="emotion-2 emotion-3"
    >
      <div
        class="emotion-4 emotion-5"
      >
        <button
          class="emotion-6 emotion-7 emotion-8"
          data-testid="closeAlert"
          type="button"
        >
          <svg
            aria-hidden="true"
            class="c-icon emotion-9 emotion-10"
            data-license="Apache License 2.0"
            data-source="Material Design"
            fill="currentColor"
            height="1em"
            preserveAspectRatio="xMidYMid meet"
            severity="danger"
            style="vertical-align: middle;"
            viewBox="0 0 24 24"
            width="1em"
          >
            <g>
              <path
                d="M19 6.41L17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z"
              />
              <path
                d="M0 0h24v24H0z"
                fill="none"
              />
            </g>
          </svg>
        </button>
        <div
          class="emotion-11 emotion-12"
        >
          <div
            class="emotion-13 emotion-14"
          >
            <div
              class="emotion-15 emotion-16"
            >
              <svg
                aria-hidden="true"
                class="c-icon emotion-17 emotion-18"
                data-license="Apache License 2.0"
                data-source="Material Design"
                fill="currentColor"
                height="1em"
                preserveAspectRatio="xMidYMid meet"
                style="vertical-align: middle;"
                viewBox="0 0 24 24"
                width="1em"
              >
                <g>
                  <path
                    d="M0 0h24v24H0V0z"
                    fill="none"
                  />
                  <path
                    d="M11 15h2v2h-2zm0-8h2v6h-2zm.99-5C6.47 2 2 6.48 2 12s4.47 10 9.99 10C17.52 22 22 17.52 22 12S17.52 2 11.99 2zM12 20c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8z"
                  />
                </g>
              </svg>
              <span
                class="emotion-19 emotion-20"
              >
                Testmessage
              </span>
            </div>
            <div
              class="emotion-21 emotion-22"
            />
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Messages Several messages renders correctly 1`] = `
.emotion-0 {
  position: fixed;
  width: 80%;
  max-width: 800px;
  top: 50px;
  left: 0;
  right: 0;
  z-index: 200;
  margin: 0 auto;
}

.emotion-2 {
  position: fixed;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  background-color: rgba(0, 0, 0, 0.8);
  z-index: 1000;
  overflow-x: auto;
}

@media (max-width: 48em) {
  .emotion-2 {
    top: 64px;
    overflow-y: auto;
    white-space: normal;
    z-index: 26;
  }
}

@media (max-width: 29.75em) {
  .emotion-2 {
    top: 43px;
  }
}

.emotion-4 {
  overflow-x: auto;
  background-color: white;
  margin: 52px auto 52px;
  padding: 1em 2em 3em;
  max-width: 400px;
  border-radius: 5px;
  border-radius: 0;
  min-height: 210px;
  max-width: 620px;
  padding-bottom: 26px;
  background-color: #d1372e;
  color: white;
}

.emotion-7 {
  display: inline-block;
  color: #ffffff;
  background-color: #20588f;
  border: 2px solid #20588f;
  border-radius: 4px;
  padding: 4px 13px;
  outline-width: 0;
  cursor: pointer;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-size: 16px;
  font-size: 0.8888888888888888rem;
  line-height: 1.625;
  font-family: 'Source Sans Pro',Helvetica,Arial,STKaiti,'华文楷体',KaiTi,SimKai,'楷体',KaiU,DFKai-SB,'標楷體',SongTi,'宋体',sans-serif;
  font-weight: 700;
  -webkit-transition: all .2s cubic-bezier(0.17, 0.04, 0.03, 0.94);
  transition: all .2s cubic-bezier(0.17, 0.04, 0.03, 0.94);
  box-shadow: none;
  text-align: center;
  -webkit-transition: background-color none;
  transition: background-color none;
  padding: 0;
  border-radius: 0;
  color: inherit;
  font-size: inherit;
  background-color: transparent;
  box-shadow: none;
  border: none;
  font-weight: 400;
  float: right;
  height: 44px;
  width: 44px;
  margin-top: -5px;
  margin-right: -20px;
}

.emotion-7:hover,
.emotion-7:focus {
  color: white;
  background-color: #184673;
  border: 2px solid #184673;
}

.emotion-7[disabled] {
  color: #777777;
  background-color: #e6e6e6;
  border-color: transparent;
  cursor: not-allowed;
}

.emotion-7:focus {
  box-shadow: 0 0 2px #20588f;
}

.emotion-7:hover,
.emotion-7:active,
.emotion-7:disabled,
.emotion-7:focus {
  box-shadow: none;
  color: #20588f;
  background-color: transparent;
  border: none;
}

.emotion-7:focus {
  outline-width: medium;
}

.emotion-9 {
  float: right;
  height: 24px;
  width: 24px;
  margin-right: 7px;
  color: #777777;
  background-color: #d1372e;
  color: white;
}

.emotion-11 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 100%;
  width: 100%;
}

.emotion-13 {
  height: 100%;
  padding-top: 26px;
  font-size: 24px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  justify-content: space-between;
}

.emotion-15 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.emotion-17 {
  width: 27px;
  height: 27px;
  margin-right: 13px;
}

.emotion-19 {
  width: 100%;
  display: inline-block;
  text-align: left;
}

.emotion-21 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  justify-content: space-between;
  -webkit-align-items: flex-end;
  -webkit-box-align: flex-end;
  -ms-flex-align: flex-end;
  align-items: flex-end;
  margin-top: 13px;
}

<div>
  <div
    class="emotion-0 emotion-1"
  >
    <div
      class="emotion-2 emotion-3"
    >
      <div
        class="emotion-4 emotion-5"
      >
        <button
          class="emotion-6 emotion-7 emotion-8"
          data-testid="closeAlert"
          type="button"
        >
          <svg
            aria-hidden="true"
            class="c-icon emotion-9 emotion-10"
            data-license="Apache License 2.0"
            data-source="Material Design"
            fill="currentColor"
            height="1em"
            preserveAspectRatio="xMidYMid meet"
            severity="danger"
            style="vertical-align: middle;"
            viewBox="0 0 24 24"
            width="1em"
          >
            <g>
              <path
                d="M19 6.41L17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z"
              />
              <path
                d="M0 0h24v24H0z"
                fill="none"
              />
            </g>
          </svg>
        </button>
        <div
          class="emotion-11 emotion-12"
        >
          <div
            class="emotion-13 emotion-14"
          >
            <div
              class="emotion-15 emotion-16"
            >
              <svg
                aria-hidden="true"
                class="c-icon emotion-17 emotion-18"
                data-license="Apache License 2.0"
                data-source="Material Design"
                fill="currentColor"
                height="1em"
                preserveAspectRatio="xMidYMid meet"
                style="vertical-align: middle;"
                viewBox="0 0 24 24"
                width="1em"
              >
                <g>
                  <path
                    d="M0 0h24v24H0V0z"
                    fill="none"
                  />
                  <path
                    d="M11 15h2v2h-2zm0-8h2v6h-2zm.99-5C6.47 2 2 6.48 2 12s4.47 10 9.99 10C17.52 22 22 17.52 22 12S17.52 2 11.99 2zM12 20c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8z"
                  />
                </g>
              </svg>
              <span
                class="emotion-19 emotion-20"
              >
                Testmessage
              </span>
            </div>
            <div
              class="emotion-21 emotion-22"
            />
          </div>
        </div>
      </div>
    </div>
    <div
      class="emotion-2 emotion-3"
    >
      <div
        class="emotion-4 emotion-5"
      >
        <button
          class="emotion-6 emotion-7 emotion-8"
          data-testid="closeAlert"
          type="button"
        >
          <svg
            aria-hidden="true"
            class="c-icon emotion-9 emotion-10"
            data-license="Apache License 2.0"
            data-source="Material Design"
            fill="currentColor"
            height="1em"
            preserveAspectRatio="xMidYMid meet"
            severity="danger"
            style="vertical-align: middle;"
            viewBox="0 0 24 24"
            width="1em"
          >
            <g>
              <path
                d="M19 6.41L17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z"
              />
              <path
                d="M0 0h24v24H0z"
                fill="none"
              />
            </g>
          </svg>
        </button>
        <div
          class="emotion-11 emotion-12"
        >
          <div
            class="emotion-13 emotion-14"
          >
            <div
              class="emotion-15 emotion-16"
            >
              <svg
                aria-hidden="true"
                class="c-icon emotion-17 emotion-18"
                data-license="Apache License 2.0"
                data-source="Material Design"
                fill="currentColor"
                height="1em"
                preserveAspectRatio="xMidYMid meet"
                style="vertical-align: middle;"
                viewBox="0 0 24 24"
                width="1em"
              >
                <g>
                  <path
                    d="M0 0h24v24H0V0z"
                    fill="none"
                  />
                  <path
                    d="M11 15h2v2h-2zm0-8h2v6h-2zm.99-5C6.47 2 2 6.48 2 12s4.47 10 9.99 10C17.52 22 22 17.52 22 12S17.52 2 11.99 2zM12 20c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8z"
                  />
                </g>
              </svg>
              <span
                class="emotion-19 emotion-20"
              >
                Testmessage2
              </span>
            </div>
            <div
              class="emotion-21 emotion-22"
            />
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Messages auth0 messages provides a cancel button 1`] = `
.emotion-0 {
  position: fixed;
  width: 80%;
  max-width: 800px;
  top: 50px;
  left: 0;
  right: 0;
  z-index: 200;
  margin: 0 auto;
}

.emotion-2 {
  position: fixed;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  background-color: rgba(0, 0, 0, 0.8);
  z-index: 1000;
  overflow-x: auto;
}

@media (max-width: 48em) {
  .emotion-2 {
    top: 64px;
    overflow-y: auto;
    white-space: normal;
    z-index: 26;
  }
}

@media (max-width: 29.75em) {
  .emotion-2 {
    top: 43px;
  }
}

.emotion-4 {
  overflow-x: auto;
  background-color: white;
  margin: 52px auto 52px;
  padding: 1em 2em 3em;
  max-width: 400px;
  border-radius: 5px;
  border-radius: 0;
  min-height: 210px;
  max-width: 620px;
  padding-bottom: 26px;
  background-color: #d1372e;
  color: white;
}

.emotion-7 {
  display: inline-block;
  color: #ffffff;
  background-color: #20588f;
  border: 2px solid #20588f;
  border-radius: 4px;
  padding: 4px 13px;
  outline-width: 0;
  cursor: pointer;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-size: 16px;
  font-size: 0.8888888888888888rem;
  line-height: 1.625;
  font-family: 'Source Sans Pro',Helvetica,Arial,STKaiti,'华文楷体',KaiTi,SimKai,'楷体',KaiU,DFKai-SB,'標楷體',SongTi,'宋体',sans-serif;
  font-weight: 700;
  -webkit-transition: all .2s cubic-bezier(0.17, 0.04, 0.03, 0.94);
  transition: all .2s cubic-bezier(0.17, 0.04, 0.03, 0.94);
  box-shadow: none;
  text-align: center;
  -webkit-transition: background-color none;
  transition: background-color none;
  padding: 0;
  border-radius: 0;
  color: inherit;
  font-size: inherit;
  background-color: transparent;
  box-shadow: none;
  border: none;
  font-weight: 400;
  float: right;
  height: 44px;
  width: 44px;
  margin-top: -5px;
  margin-right: -20px;
}

.emotion-7:hover,
.emotion-7:focus {
  color: white;
  background-color: #184673;
  border: 2px solid #184673;
}

.emotion-7[disabled] {
  color: #777777;
  background-color: #e6e6e6;
  border-color: transparent;
  cursor: not-allowed;
}

.emotion-7:focus {
  box-shadow: 0 0 2px #20588f;
}

.emotion-7:hover,
.emotion-7:active,
.emotion-7:disabled,
.emotion-7:focus {
  box-shadow: none;
  color: #20588f;
  background-color: transparent;
  border: none;
}

.emotion-7:focus {
  outline-width: medium;
}

.emotion-9 {
  float: right;
  height: 24px;
  width: 24px;
  margin-right: 7px;
  color: #777777;
  background-color: #d1372e;
  color: white;
}

.emotion-11 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 100%;
  width: 100%;
}

.emotion-13 {
  height: 100%;
  padding-top: 26px;
  font-size: 24px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  justify-content: space-between;
}

.emotion-15 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.emotion-17 {
  width: 27px;
  height: 27px;
  margin-right: 13px;
}

.emotion-19 {
  width: 100%;
  display: inline-block;
  text-align: left;
}

.emotion-21 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  justify-content: space-between;
  -webkit-align-items: flex-end;
  -webkit-box-align: flex-end;
  -ms-flex-align: flex-end;
  align-items: flex-end;
  margin-top: 13px;
}

.emotion-24 {
  display: inline-block;
  color: #ffffff;
  background-color: #20588f;
  border: 2px solid #20588f;
  border-radius: 4px;
  padding: 4px 13px;
  outline-width: 0;
  cursor: pointer;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-size: 16px;
  font-size: 0.8888888888888888rem;
  line-height: 1.625;
  font-family: 'Source Sans Pro',Helvetica,Arial,STKaiti,'华文楷体',KaiTi,SimKai,'楷体',KaiU,DFKai-SB,'標楷體',SongTi,'宋体',sans-serif;
  font-weight: 700;
  -webkit-transition: all .2s cubic-bezier(0.17, 0.04, 0.03, 0.94);
  transition: all .2s cubic-bezier(0.17, 0.04, 0.03, 0.94);
  box-shadow: none;
  text-align: center;
  color: #20588f;
  background-color: transparent;
  border: 2px solid #20588f;
  box-shadow: none;
  color: #20588f;
  background-color: transparent;
  border: 2px solid #20588f;
  box-shadow: none;
  background-color: white;
  margin-left: 0;
}

.emotion-24:hover,
.emotion-24:focus {
  color: white;
  background-color: #184673;
  border: 2px solid #184673;
}

.emotion-24[disabled] {
  color: #777777;
  background-color: #e6e6e6;
  border-color: transparent;
  cursor: not-allowed;
}

.emotion-24:focus {
  box-shadow: 0 0 2px #20588f;
}

.emotion-24:hover,
.emotion-24:focus {
  color: white;
  background-color: #20588f;
  border: 2px solid transparent;
}

.emotion-24:disabled {
  color: #777777;
  border: 2px solid transparent;
  background-color: #e6e6e6;
  cursor: not-allowed;
}

.emotion-24:hover,
.emotion-24:focus {
  color: white;
  background-color: #20588f;
  border: 2px solid transparent;
}

.emotion-24:disabled {
  color: #777777;
  border: 2px solid transparent;
  background-color: #e6e6e6;
  cursor: not-allowed;
}

<div>
  <div
    class="emotion-0 emotion-1"
  >
    <div
      class="emotion-2 emotion-3"
    >
      <div
        class="emotion-4 emotion-5"
      >
        <button
          class="emotion-6 emotion-7 emotion-8"
          data-testid="closeAlert"
          type="button"
        >
          <svg
            aria-hidden="true"
            class="c-icon emotion-9 emotion-10"
            data-license="Apache License 2.0"
            data-source="Material Design"
            fill="currentColor"
            height="1em"
            preserveAspectRatio="xMidYMid meet"
            severity="danger"
            style="vertical-align: middle;"
            viewBox="0 0 24 24"
            width="1em"
          >
            <g>
              <path
                d="M19 6.41L17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z"
              />
              <path
                d="M0 0h24v24H0z"
                fill="none"
              />
            </g>
          </svg>
        </button>
        <div
          class="emotion-11 emotion-12"
        >
          <div
            class="emotion-13 emotion-14"
          >
            <div
              class="emotion-15 emotion-16"
            >
              <svg
                aria-hidden="true"
                class="c-icon emotion-17 emotion-18"
                data-license="Apache License 2.0"
                data-source="Material Design"
                fill="currentColor"
                height="1em"
                preserveAspectRatio="xMidYMid meet"
                style="vertical-align: middle;"
                viewBox="0 0 24 24"
                width="1em"
              >
                <g>
                  <path
                    d="M0 0h24v24H0V0z"
                    fill="none"
                  />
                  <path
                    d="M11 15h2v2h-2zm0-8h2v6h-2zm.99-5C6.47 2 2 6.48 2 12s4.47 10 9.99 10C17.52 22 22 17.52 22 12S17.52 2 11.99 2zM12 20c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8z"
                  />
                </g>
              </svg>
              <span
                class="emotion-19 emotion-20"
              >
                Testmessage
              </span>
            </div>
            <div
              class="emotion-21 emotion-22"
            >
              <button
                class="emotion-23 emotion-24 emotion-8"
                type="button"
              >
                Avbryt
              </button>
              <button
                class="emotion-23 emotion-24 emotion-8"
                type="button"
              >
                Logg inn på nytt
              </button>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Messages auth0 messages provides a cancel button 2`] = `
.emotion-0 {
  position: fixed;
  width: 80%;
  max-width: 800px;
  top: 50px;
  left: 0;
  right: 0;
  z-index: 200;
  margin: 0 auto;
  display: none;
}

<div>
  <div
    class="emotion-0 emotion-1"
  />
</div>
`;
